[project]
name = "recipe-scrapers-sage"
version = "0.1.0"
description = ""
authors = [{ name = "Matt Anderson", email = "matt@manderscience.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["recipe-scrapers>=14"]

[dependency-groups]
dev = [
    "isort>=5.12.0,<7",
    "black>=23.7,<26.0",
    "pytest>=7.4,<9.0",
    "ruff>=0.0.280,<0.7.2",
    "git-changelog>=2.0.0,<3",
    "pytest-cov>=4.1,<8.0",
    "ipykernel>=6.25.0,<7",
    "griffe>=0.32.3,<1.15.0",
    "ty>=0.0.16",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["recipe_scrapers_sage"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"


[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.ruff.lint]
extend-select = [ # https://beta.ruff.rs/docs/rules/
    "A", 
    "ANN",
    "ARG", 
    "B",
    "BLE",
    "C4", 
    "D", 
    "E",
    "EM",
    "ERA", 
    "F",
    "FA",
    "FBT", 
    "FIX", 
    "I", 
    "ISC", 
    "ICN", 
    "INP", 
    "PERF", 
    "PIE", 
    "PL", 
    "PT", 
    "Q", 
    "RSE", 
    "RET", 
    "RUF",
    "S",
    "SIM", 
    "T10", 
    "T20", 
    "TCH", 
    "TD", 
    "TID",
    "YTT"]
extend-ignore = ["D202", "D205", "D107"]
pydocstyle.convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN", "S", "ARG001", "B008", "RUF015", "E501", "D100", "D103"]
